--- a/globals.html
+++ b/globals.html
@@ -2459,6 +2459,11 @@ img {
 </nav>
 <div class="container container-main">
 	<div class="content-wrap">
+		<div class="tsd-panel tsd-typography">
+			<a href="#discord-sambo-localization-module" id="discord-sambo-localization-module" style="color: inherit; text-decoration: none;">
+				<h1>Discord-Sambo Localization Module</h1>
+			</a>
+		</div>
 		<section class="tsd-panel-group tsd-index-group">
 			<h2>Index</h2>
 			<section class="tsd-panel tsd-index-panel">
@@ -2520,7 +2525,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">Localization<wbr>Resource<wbr>Proxy&lt;T&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/discord-sambo/localization/blob/5932090/src/types/LocalizationResourceProxy.ts#L12">types/LocalizationResourceProxy.ts:12</a></li>
+						<li>Defined in <a href="https://github.com/discord-sambo/localization/blob/d7d5843/src/types/LocalizationResourceProxy.ts#L12">types/LocalizationResourceProxy.ts:12</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
