Build docs from master: 9ee02528d316de8d5f6e247e5a3e8eb7ee662070

--- a/globals.html
+++ b/globals.html
@@ -2521,13 +2521,13 @@ img {
 				<div class="tsd-signature tsd-kind-icon">Localization<wbr>Resource<wbr>Proxy&lt;T&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/discord-sambo/localization/blob/b7c8a80/src/types/LocalizationResourceProxy.ts#L12">types/LocalizationResourceProxy.ts:12</a></li>
+						<li>Defined in <a href="https://github.com/discord-sambo/localization/blob/9ee0252/src/types/LocalizationResourceProxy.ts#L12">types/LocalizationResourceProxy.ts:12</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
 						<p>Represents a Proxy object for a specific language where function calls
-							will call [Localization.resource()]{@link Localization#resource} for that
+							will call <a href="classes/localization.html#resource">Localization.resource()</a> for that
 						language and forward the given <code>TemplateArguments</code> to the resource lookup.</p>
 					</div>
 					<blockquote>
